--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,8 @@
   box-sizing: border-box;
 }
 
-/* Element Styles */
-
 body {
-  	margin: 1em .5em 1em .5em;
+  	margin: 1em .75em 1em .75em;
   	text-align: center;
   	font-family: 'Roboto', sans-serif;
   	color: #222;
@@ -20,6 +18,7 @@ a {
 	text-decoration: none;
 	color: black;
 	font-weight: 500;
+	text-transform: uppercase;
 }
 
 a:hover {
@@ -27,46 +26,41 @@ a:hover {
 }
 
 nav ul {
-	display: inline;
 	list-style-type: none;
-	justify-content: space-around;
-	
+	padding: 0;
 }
 
 nav li {
-	padding: .5em;
+	padding: 1em;
+	
 }
 
 nav a {
-	text-decoration: none;
 	color: black;
-	text-transform: uppercase;
+}
+
+footer {
+	display: flex;
+	justify-content: space-between;
 }
 
 footer nav {
-	float: right;
 	display: none;
 }
 
 footer .name {
-/*	float: left;*/
-	padding-top: .5em;
+	float: left;
+	padding-top: .75em;
 }
-
-/* Section Styles */
 
 .name {
 	font-size: 180%;
 	font-family: 'Lobster', cursive;
 }
 
-/* Profile information section */
-
 .profile-image {
 	width: 75%;
 }
-
-/* Portfolio Section */
 
 .thumbnail-description {
 	margin: 0  2em 2em 2em;
@@ -76,17 +70,12 @@ footer .name {
 	width: 100%;
 }
 
-.thumbnail-section {
-/*	flex: 1;*/
-}
-
 .thumbnail-section-title,
-.contact, 
-.contact-information {
-	padding-top: 5%;
+.contact,
+.main-header,
+.skills {
+	padding-top: 4em;
 }
-
-/* Contact Section */
 
 .contact {
 	width: 90%;
@@ -98,52 +87,45 @@ footer .name {
 	color: #3A3A3A;
 }
 
+.contact-information {
+	padding-top: 1em;
+}
+
 .top {
-		display: block;
-		padding-top: 1.5em;
+	padding-top: 1.75em;
+		
 }
 
-/* Media Queries */
-
-@media screen and (min-width: 320px) {
-	footer .name {
-		float: left;
-	}
-	
-	.top {
-		float: right;
-	}
-	
-	.main-nav {
-		padding-bottom: 2em;
-	}
+.skills {
+	padding-bottom: 4em;
 }
+
 
 @media screen and (min-width: 768px) {
-	.main-nav {
-		width: 500px;
-		margin: 0 auto;
+	.nav-container {
+		margin:  0 auto;
 	}
-	
 	.main-nav ul {
 		display: inline-flex;
 	}
-	
-	.main-nav li {
-		padding: 1em 2em 0;
-	}
-	
-	section {
+
+	.portfolio-container {
 		display: flex;
 		flex-flow: row wrap;
+		
 	}
 	
 	footer nav {
-		display: inline;
+		display: block;
 	}
 	
 	footer ul {
-		display: inline-flex;
+		display: inline-flex;	
+	}
+	
+	footer {
+		display: flex;
+		justify-content: space-between;
 	}
 	
 	.top {
@@ -153,14 +135,13 @@ footer .name {
 	.main-header {
 		display: flex;
 		flex-direction: row-reverse;
-		height: 100%;
-		margin: 5em .75em 5em .75em;
+		justify-content: space-between;
 	}
 	
 	.profile-bio {
-		width: 50%;
+		padding-right: 1em;
 		text-align: left;
-		margin: 0 .75em;
+		margin: 0;
 	}
 	
 	.profile-image {
@@ -179,22 +160,24 @@ footer .name {
 }
 
 @media screen and (min-width: 1024px) {
-	main,
-	.contact {
-		margin-top: 5em; 
-	}
 	
 	.name {
-		float: left;
-		padding: .333em;
+		padding: 1em 0 .5em 0;
 	}
 	
-	.main-nav {
-		float: right;
+	footer {
+		display: flex;
+		justify-content: space-between;
+	}
+	
+	footer .name {
+		padding-top: .75em;
 	}
 	
 	.main-header {
-		display: inline-block;
+		display: flex;
+		justify-content: space-between;
+		padding: .5em;
 	}
 	
 	.profile-bio {
@@ -208,6 +191,12 @@ footer .name {
 	
 	.thumbnail-section {
 		width: 33.33%;
+	}
+	
+	.nav-container {
+		display: flex;
+		justify-content: space-between;
+		padding-bottom: 3em;
 	}
 	
 }
